nuevo con correcciones

--- a/Abestiak eta musika baliabideak (Irakasleak).html
+++ b/Abestiak eta musika baliabideak (Irakasleak).html
@@ -211,7 +211,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -253,7 +253,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Siempre contigo → Kitty Kasaudo</h3>
-                    <p>Banaketa eta dibortzio prozesuak bizi dituzten haurrei laguntzeko abesti bat, oraingoan gurasoen ahotsetik kontatua: “Gauzak aldatu arren, jada elkarrekin bizi ez bagara ere… beti zurekin egongo naiz.”</p>
+                    <p>Banaketa eta dibortzio prozesuak bizi dituzten haurrei laguntzeko abesti bat, oraingoan <strong>gurasoen ahotsetik</strong> kontatua: “Gauzak aldatu arren, jada elkarrekin bizi ez bagara ere… beti zurekin egongo naiz.”</p>
                     <p>Entzun abestia <a href="https://www.youtube.com/watch?v=ddpCL2n_GCw" target="_blank">Hemen</a>.</p>
                 </div>
                 <div class="book-cover">
@@ -265,7 +265,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Mamá y papá se separan… pero el amor siempre está → Pequeñas grandes canciones </h3>
-                    <p>Abesti honek haurrei helarazten die gurasoen maitasuna bere horretan mantentzen dela, elkarrekin bizi ez arren. Hizkera hurbil, goxo eta ulerterraza erabiliz, mezu positiboak eskaintzen ditu haurren autoestimua eta lasaitasun emozionala indartzeko, tristura edo zalantza sentimenduak konfiantza eta segurtasun bihurtzen lagunduz.</p>
+                    <p>Abesti honek haurrei helarazten die <strong>gurasoen maitasuna bere horretan mantentzen</strong> dela, elkarrekin bizi ez arren. Hizkera hurbil, goxo eta ulerterraza erabiliz, mezu positiboak eskaintzen ditu <strong>haurren autoestimua eta lasaitasun emozionala indartzeko</strong>, tristura edo zalantza sentimenduak konfiantza eta segurtasun bihurtzen lagunduz.</p>
                     <p>Entzun abestia <a href="https://www.youtube.com/watch?v=ZFMuDQnYDFE" target="_blank">Hemen</a>.</p> 
                 </div>
                 <div class="book-cover">
