--- a/Baliabideak (Familiak).html
+++ b/Baliabideak (Familiak).html
@@ -193,7 +193,7 @@
     <!-- HEADER -->
     <header>
         <div class="header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -222,7 +222,7 @@
             <div class="section-title">
                 <h2>Baliabide Orokorrak</h2>
                 <p>
-                    Haurrak dibortzio-egoeran bizi ditzaketen emozio eta egoera zailak kudeatzeko, familiek eskura izatea baliabide egokiak funtsezkoa da. Atal honetan, ipuinak, abestiak, jokoak eta ikus-entzunezkoak bildu dira. Helburua da familiei laguntza eskuragarria eskaintzea, haurren ongizate emozionalarekin lagunduko duten tresnekin.
+                    Haurrak dibortzio-egoeran bizi ditzaketen <strong>emozio eta egoera zailak kudeatzeko</strong>, familiek eskura izatea <strong>baliabide egokiak funtsezkoa</strong> da. Atal honetan, ipuinak, abestiak, jokoak eta ikus-entzunezkoak bildu dira. <strong>Helburua da familiei laguntza eskuragarria eskaintzea</strong>, haurren ongizate emozionalarekin lagunduko duten tresnekin.
                 </p>
             <div class="section-title">
                 <p>Baliabide hauek iraunkorrak, erraz aplikatzeko modukoak eta eguneroko praktikarekin bateragarriak dira; gainera, atal bakoitzean adin-tarteari eta egoera emozionalari egokitutako proposamenak aurkituko dituzu.</p>
@@ -234,25 +234,25 @@
                 <a href="Ipuinak eta album ilustratuak (Familiak).html" class="box">
                     <span class="emoji">📚</span>
                     <h3>Ipuinak eta album ilustratuak</h3>
-                    <p>Baliabide hauek haurren emozioak lantzeko aukera ematen dute, istorioen bidez. Dibortzioa, familia-aniztasuna edo aldaketa emozionalak modu natural eta ulergarrian lantzen laguntzen dute.</p>
+                    <p>Baliabide hauek haurren <strong>emozioak lantzeko aukera </strong>ematen dute, istorioen bidez. Dibortzioa, familia-aniztasuna edo aldaketa emozionalak modu natural eta ulergarrian lantzen laguntzen dute.</p>
                 </a>
 
                 <a href="Bideoak eta ikus-entzunezkoak (Familiak).html" class="box">
                     <span class="emoji">🎬</span>
                     <h3>Bideoak eta ikus-entzunezkoak</h3>
-                    <p>Ikus-entzunezkoek egoera konplexuak modu bisualean azaltzen dituzte, haurren arreta eta ulermena erraztuz. Enpatia, emozioen identifikazioa eta hausnarketa sustatzeko tresna egokiak dira.</p>
+                    <p>Ikus-entzunezkoek <strong>egoera konplexuak modu bisualean azaltzen</strong> dituzte, haurren arreta eta ulermena erraztuz. Enpatia, emozioen identifikazioa eta hausnarketa sustatzeko tresna egokiak dira.</p>
                 </a>
 
                 <a href="Abestiak eta musika baliabideak (Familiak).html" class="box">
                     <span class="emoji">🎵</span>
                     <h3>Abestiak eta musika baliabideak</h3>
-                    <p>Musikak emozioak adierazteko eta kudeatzeko bide eraginkorra eskaintzen du. Abestien bidez, ikasleek sentimenduak identifikatu, lasaitu eta partekatzeko aukera dute.</p>
+                    <p>Musikak <strong>emozioak adierazteko eta kudeatzeko</strong> bide eraginkorra eskaintzen du. Abestien bidez, ikasleek sentimenduak identifikatu, lasaitu eta partekatzeko aukera dute.</p>
                 </a>
 
                 <a href="Jolasak (Familiak).html" class="box">
                     <span class="emoji">🎲</span>
                     <h3>Jolasak</h3>
-                    <p>Jolasen bidez, ikasleek modu naturalean lantzen dituzte emozioak, harremanak eta gatazken kudeaketa. Ikaskuntza ludikoa eta soziala sustatzen duten baliabideak dira.</p>
+                    <p>Jolasen bidez, ikasleek <strong>modu naturalean lantzen dituzte emozioak, harremanak eta gatazken kudeaketa</strong>. Ikaskuntza ludikoa eta soziala sustatzen duten baliabideak dira.</p>
                 </a>
 
             </div>
