--- a/Gelarako jarduerak eta ariketa praktikoak (Irakasleak).html
+++ b/Gelarako jarduerak eta ariketa praktikoak (Irakasleak).html
@@ -228,7 +228,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -257,7 +257,7 @@
         <div class="section-title">
             <h2>Gelarako jarduerak eta ariketa praktikoak</h2>
             <p>
-                Atal honetan, irakasleek dibortzio-egoeran dauden ikasleen jarraipen emozionala eta hezitzailea egiteko erabil ditzaketen ebaluazio eta jarraipen tresnak biltzen dira. Baliabide hauek irakaslearen behaketa sistematikoa, familien eta hezkuntza-orientatzailearen arteko koordinazioa eta ikaslearen bilakaeraren erregistro jarraitua errazteko pentsatuta daude. Tresna hauek orientagarriak dira, eta ikasleen adinaren, bizi duten egoeraren eta gelako testuinguruaren arabera egokitu daitezke, betiere esku-hartze arduratsu, errespetuzko eta profesional baten barruan.
+                Atal honetan, irakasleek dibortzio-egoeran dauden ikasleen jarraipen emozionala eta hezitzailea egiteko erabil ditzaketen ebaluazio eta jarraipen tresnak biltzen dira. Baliabide hauek <strong>irakaslearen behaketa sistematikoa, familien eta hezkuntza-orientatzailearen arteko koordinazioa eta ikaslearen bilakaeraren erregistro jarraitua errazteko pentsatuta</strong> daude. Tresna hauek orientagarriak dira, eta ikasleen adinaren, bizi duten egoeraren eta gelako testuinguruaren arabera egokitu daitezke, betiere esku-hartze arduratsu, errespetuzko eta profesional baten barruan.
             </p>
         </div>
 
@@ -268,7 +268,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Aste honetako nire emozioak" fitxa</h3>
-                    <p>Aste osoan zehar ikasleak sentitu dituen emozio nagusiak identifikatzeko eta markatzeko fitxa sinplea da. Eguraldi-sisteman oinarrituta (eguzkitsua, lainotsua, euritsua…), haurrek modu seguruan adierazten dute nola bizi izan dituzten egunetako egoerak, xehetasun pertsonalik kontatu beharrik gabe. Irakasleari laguntzen dio aldaketa emozionalak antzematen.</p>
+                    <p>Aste osoan zehar ikasleak sentitu dituen <strong>emozio nagusiak identifikatzeko eta markatzeko</strong> fitxa sinplea da. Eguraldi-sisteman oinarrituta (eguzkitsua, lainotsua, euritsua…), haurrek modu seguruan adierazten dute nola bizi izan dituzten egunetako egoerak, xehetasun pertsonalik kontatu beharrik gabe. <strong>Irakasleari laguntzen dio aldaketa emozionalak antzematen.</strong></p>
                 </div>
                 <a href="PDF/Asteko behaketa fitxa.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -277,7 +277,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Nor da nire laguntza-sarea? mapa</h3>
-                    <p>Ikasleak bere inguruan dituen pertsona lagungarriak identifikatzeko baliabidea: irakasleak, lagunak, aitona-amonak, anai-arrebak… Haurrak marrazkien edo sinboloen bidez adierazten ditu bere “sareko” pertsonak. Irakasleak ikus dezake nork ematen dion segurtasuna eta zer harreman indartu behar den.</p>
+                    <p>Ikasleak bere inguruan dituen <strong>pertsona lagungarriak identifikatzeko</strong> baliabidea: irakasleak, lagunak, aitona-amonak, anai-arrebak… Haurrak marrazkien edo sinboloen bidez adierazten ditu bere “sareko” pertsonak. <strong>Irakasleak ikus dezake nork ematen dion segurtasuna eta zer harreman indartu behar den.</strong></p>
                 </div>
                 <a href="PDF/Nor da nire laguntza-sarea.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -286,7 +286,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Bi etxe, errutina bakarra" antolaketa-fitxa</h3>
-                    <p>Bi etxe artean bizi diren haurrentzat. Fitxak asteko eguneroko errutinak antolatzeko laguntza ematen du: lanak, materiala, jarduerak, gorputz-hezkuntzako motxila, etab. Helburua da antolaketa hobetzea eta estresa murriztea, prozesua errazagoa eta aurresangarriagoa izan dadin.</p>
+                    <p>Bi etxe artean bizi diren haurrentzat. Fitxak <strong>asteko eguneroko errutinak antolatzeko</strong> laguntza ematen du: lanak, materiala, jarduerak, gorputz-hezkuntzako motxila, etab. <strong>Helburua da antolaketa hobetzea eta estresa murriztea</strong>, prozesua errazagoa eta aurresangarriagoa izan dadin.</p>
                 </div>
                 <a href="PDF/Bi etxe, errutina bakarra.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -295,7 +295,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Nola jakin haserre nagoela?" seinale fisikoen gida</h3>
-                    <p>Haurrak haserrea edo urduritasuna sentitzen ari direnean gorputzak ematen dizkien seinaleak identifikatzen laguntzen duen materiala: bihotza azkarrago, sabeleko mina, eskuak tinko… Gida honek autoerregulazio emozionala lantzen du, baita egoera zailetan aurrez esku hartzeko aukera ere.</p>
+                    <p>Haurrak <strong>haserrea edo urduritasuna</strong> sentitzen ari direnean <strong>gorputzak ematen dizkien seinaleak identifikatzen</strong> laguntzen duen materiala: bihotza azkarrago, sabeleko mina, eskuak tinko… Gida honek <strong>autoerregulazio emozionala lantzen</strong> du, baita egoera zailetan aurrez esku hartzeko aukera ere.</p>
                 </div>
                 <a href="PDF/Nola jakin haserre nagoela.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -304,7 +304,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Lasaitzeko estrategiak" poster bisuala</h3>
-                    <p>Arnasketa ariketak, 10 arteko zenbaketa, “atseden txokoa” erabiltzea, marraztea… bezalako teknikak jasotzen dituen kartel praktikoa. Ikasgelan jar daiteke eta haurrek egunero kontsultatzeko balio du. Egokia da tentsio momentuetan berehala erabili ahal izateko.</p>
+                    <p>Arnasketa ariketak, 10 arteko zenbaketa, “atseden txokoa” erabiltzea, marraztea… bezalako teknikak jasotzen dituen kartel praktikoa. Ikasgelan jar daiteke eta haurrek egunero kontsultatzeko balio du. <strong>Egokia da tentsio momentuetan berehala erabili ahal izateko.</strong></p>
                 </div>
                 <a href="PDF/Lasaitzeko estrategiak.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -313,7 +313,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Egun honeko 3 gauza onak" koaderno txikia</h3>
-                    <p>Eskola-hasieran edo amaieran haurrek eguneko hiru gauza on idazten dituzten koaderno pertsonala. Praktika honek pentsamendu positiboa eta egonkortasun emozionala indartzen ditu, bereziki etxean egoera gatazkatsuak daudenean.</p>
+                    <p>Eskola-hasieran edo amaieran haurrek<strong> eguneko hiru gauza on idazten dituzten koaderno pertsonala</strong>. Praktika honek pentsamendu positiboa eta egonkortasun emozionala indartzen ditu, bereziki etxean egoera gatazkatsuak daudenean.</p>
                 </div>
                 <a href="PDF/Egun honetako 3 gauza onak.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -322,7 +322,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Nire indarguneak" autoestimua lantzeko fitxa</h3>
-                    <p>Ikasleak bere trebetasun, ahalmen eta gauza onak identifikatzen dituen jarduera sinplea. Lagunek ere idatz dezakete, eta horrek autoestimua indartzen laguntzen du.</p>
+                    <p>Ikasleak bere trebetasun, ahalmen eta gauza onak identifikatzen dituen jarduera sinplea. Lagunek ere idatz dezakete, eta horrek <strong>autoestimua indartzen laguntzen du.</strong></p>
                 </div>
                 <a href="PDF/Nire indarguneak.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
@@ -331,7 +331,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>"Nire astea" jarraipen-agenda</h3>
-                    <p>Astean zehar ikasleak nola sentitu den, zer zailtasun izan dituen eta zein arrakasta txiki lortu dituen laburbiltzeko tresna. Irakaslearentzako informazio baliotsua da jarraipen emozional erregularra egiteko.</p>
+                    <p>Astean zehar ikasleak nola sentitu den, zer zailtasun izan dituen eta zein arrakasta txiki lortu dituen laburbiltzeko tresna. <strong>Irakaslearentzako informazio baliotsua da jarraipen emozional erregularra egiteko.</strong></p>
                 </div>
                 <a href="PDF/Nire astea.pdf" class="pdf-button" download> 📄 PDF </a>
             </div>
