--- a/Irakasleak.html
+++ b/Irakasleak.html
@@ -169,7 +169,7 @@
     <!-- Cabecera / Header -->
     <header>
         <div class="container header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -197,7 +197,7 @@
             <div class="section-title">
                 <h2>Irakasleentzako Orientabideak eta Baliabideak</h2>
                 <p>
-                    Irakasleek funtsezko rola dute ikasleen ongizatea eta garapen integralean, bereziki familiaren egoera dibortziatuak eragin dezakeenean. Sekzio honek orientabide praktikoak eta baliabide hezigarriak eskaintzen ditu, eguneroko ikasketa-esparruan egoera horiei modu kontziente eta errespetuz erantzuteko. Hemen aurkituko dituzue bi atari nagusi: “Orientabideak”, non ikasleen beharrak identifikatzeko eta erantzuteko jarraibideak eskaintzen diren, eta “Baliabideak”, non jarduera, ipuin, bideo eta material praktikoak aurkituko dituzuen, klasean aplikatzeko prest.
+                    Irakasleek <strong>funtsezko rola</strong> dute <strong>ikasleen ongizatea eta garapen integralean</strong>, bereziki <strong>familiaren egoera dibortziatuak</strong> eragin dezakeenean. Sekzio honek <strong>orientabide praktikoak</strong> eta <strong>baliabide hezigarriak</strong> eskaintzen ditu, eguneroko ikasketa-esparruan egoera horiei modu kontziente eta errespetuz erantzuteko. Hemen aurkituko dituzue bi atari nagusi: <strong>“Orientabideak”</strong>, non ikasleen beharrak identifikatzeko eta erantzuteko jarraibideak eskaintzen diren, eta <strong>“Baliabideak”</strong>, non jarduera, ipuin, bideo eta material praktikoak aurkituko dituzuen, klasean aplikatzeko prest.
                 </p>
             </div>
 
