--- a/Jarrerak eta alerta-seinaleak (Familiak).html
+++ b/Jarrerak eta alerta-seinaleak (Familiak).html
@@ -193,7 +193,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -222,7 +222,7 @@
         <!-- INTRO -->
         <div class="intro">
             <p>
-                Dibortzio-prozesu baten ondorioz, haurren portaerak eta emozioak aldatu daitezke. Atal honek alerta-seinale nagusiak aurkezten ditu, gurasoek haien seme-alabei arreta jartzeko eta behar denean laguntza egokia eskaintzeko. Sei aukera praktikoak aurkituko dituzue, adinaren arabera antolatuta, eta 2.2 Baliabideak atalean laguntza osagarriak daude. Atal hau zikloka banatuta dago, adina kontuan hartu beharreko faktore bat delako, baina hori ez du esan nahi jarrera hauek soilik ziklo horietara mugatzen direla.
+                Dibortzio-prozesu baten ondorioz, <strong>haurren portaerak eta emozioak aldatu daitezke</strong>. Atal honek alerta-seinale nagusiak aurkezten ditu, gurasoek haien seme-alabei arreta jartzeko eta <strong>behar denean laguntza egokia eskaintzeko</strong>. Atal hau zikloka banatuta dago, adina kontuan hartu beharreko faktore bat delako, baina hori ez du esan nahi jarrera hauek soilik ziklo horietara mugatzen direla.
             </p>
         </div>
 
