--- a/Jarrerak eta alerta-seinaleak (Irakasleak).html
+++ b/Jarrerak eta alerta-seinaleak (Irakasleak).html
@@ -193,7 +193,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -222,7 +222,7 @@
         <!-- INTRO -->
         <div class="intro">
             <p>
-                Haurrek dibortzio-prozesu batean bizi direnean, beren jarrera eta portaerak aldatu egin daitezke, baita errutinak eta emozioak ere. Atal honek alerta-seinale nagusiak aurkezten ditu, ikasleen ongizatea zaintzeko eta behar denean laguntza egokia eskaintzeko. Gainera, jokabide praktikoak eskaintzen dira, irakasleek egoera horiei modu eraginkorrean eta koherentean erantzuteko. Atal hau zikloka banatuta dago, adina kontuan hartu beharreko faktore bat delako, baina hori ez du esan nahi jarrera eta orientabide hauek soilik ziklo horietara mugatzen direla.
+               Haurrek <strong>dibortzio-prozesu batean</strong> bizi direnean, beren <strong>jarrera eta portaerak</strong> aldatu egin daitezke, baita <strong>errutinak eta emozioak</strong> ere. Atal honek <strong>alerta-seinale nagusiak</strong> aurkezten ditu, <strong>ikasleen ongizatea</strong> zaintzeko eta behar denean <strong>laguntza egokia</strong> eskaintzeko. Gainera, <strong>jokabide praktikoak</strong> eskaintzen dira, irakasleek egoera horiei <strong>modu eraginkorrean eta koherentean</strong> erantzuteko. Atal hau <strong>zikloka banatuta</strong> dago, <strong>adina kontuan hartu beharreko faktore bat</strong> delako, baina horrek ez du esan nahi jarrera eta orientabide hauek soilik ziklo horietara mugatzen direnik.
             </p>
         </div>
 
