--- a/Jolasak (Familiak).html
+++ b/Jolasak (Familiak).html
@@ -211,7 +211,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -253,7 +253,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Mi familia ha cambiado</h3>
-                    <p>Dibortzioaren faseak ulertzeko joko bat, banantzetik bi etxetan bizitzeraino.</p>
+                    <p>Dibortzioaren <strong>faseak</strong> ulertzeko joko bat, banantzetik bi etxetan bizitzeraino.</p>
                 </div>
                 <div class="book-cover">
                     <img src="img/Mi familia ha cambiado.gif" alt="Libro 1">
@@ -264,7 +264,8 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Tutty</h3>
-                    <p>Tutty jokoa genero-estereotipoak gainditzen lagundu nahi duten haur eta helduei zuzenduta dago, aniztasuna balioan jartzen duten eta familia eredu desberdinak modu natural eta errespetuzkoan erakusten dituzten jolasak bilatzen dituztenei. Bereziki egokia da hezkuntza-testuinguruetan erabiltzeko, eskola-zentroetan familia-aniztasuna lantzeko, harreman afektiboen inguruko hausnarketa sustatzeko eta egoera errealak, hala nola dibortzioa edo etxebizitza-aldaketak, ulertzen laguntzeko.</p> 
+                    <p>Tutty jokoa genero-estereotipoak gainditzen lagundu nahi duten haur eta helduei zuzenduta dago, <strong>aniztasuna balioan jartzen duten eta familia eredu desberdinak</strong> modu natural eta errespetuzkoan erakusten dituzten jolasak bilatzen dituztenei. Bereziki egokia da hezkuntza-testuinguruetan erabiltzeko, eskola-zentroetan familia-aniztasuna lantzeko, harreman afektiboen inguruko hausnarketa sustatzeko eta egoera errealak, hala nola dibortzioa edo etxebizitza-aldaketak, ulertzen laguntzeko.</p> 
+                </div>
                 </div>
                 <div class="book-cover">
                     <img src="img/Tutty.jpg" alt="Libro 2">
@@ -275,7 +276,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Misión emoción</h3>
-                    <p>Misión Emoción jokoa emozioen inguruko komunikazioa indartu nahi duten haurrei eta familiei zuzenduta dago, elkarrizketa dibertigarri eta esanguratsuak sortzea helburu duena. Misio- eta emozio-txartelen bidez, elkarrekin partekatzeko une bereziak eskaintzen ditu, autoestimua, arreta-gaitasuna eta adimen sozial eta emozionala modu naturalean garatzen lagunduz, jolasaren bitartez.</p>
+                    <p>Misión Emoción jokoa <strong>emozioen inguruko komunikazioa indartu</strong> nahi duten haurrei eta familiei zuzenduta dago, elkarrizketa dibertigarri eta esanguratsuak sortzea helburu duena. Misio- eta emozio-txartelen bidez, elkarrekin partekatzeko une bereziak eskaintzen ditu, <strong>autoestimua, arreta-gaitasuna eta adimen sozial eta emozionala </strong>modu naturalean garatzen lagunduz, jolasaren bitartez.</p>
                 </div>
                 <div class="book-cover">
                     <img src="img/Mision emocion.jpg" alt="Libro 1">
@@ -286,7 +287,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Talking, Feeling & Doing Divorce card Game</h3>
-                    <p>Haurrentzat diseinatutako karta-joko bat, beren sentimenduak komunikatzen eta dibortzioarekin lotutako arazoak ulertzen laguntzeko.</p> 
+                    <p>Haurrentzat diseinatutako karta-joko bat, beren <strong>sentimenduak komunikatzen</strong> eta dibortzioarekin lotutako <strong>arazoak ulertzen laguntzeko.</strong></p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/The talking doing divorce.png" alt="Libro 2">
@@ -297,7 +298,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>My Parents Split Up</h3>
-                    <p>Jolas hau banaketa edo dibortzio egoerak bizi dituzten haurrei zuzenduta dago bereziki, emozioei buruz hitz egiteko espazio segurua sortzea helburu duena. Galdera sinpleen bidez, errua, tristura, itxaropena edo abandonuaren beldurra bezalako sentimenduak lantzen laguntzen du, haurrei maitatuta daudela ziurtatuz eta haien ongizate emozionala indartuz.</p> 
+                    <p>Jolas hau banaketa edo dibortzio egoerak bizi dituzten haurrei zuzenduta dago bereziki,<strong> emozioei buruz hitz egiteko espazio segurua sortzea helburu </strong>duena. Galdera sinpleen bidez, errua, tristura, itxaropena edo abandonuaren beldurra bezalako sentimenduak lantzen laguntzen du, haurrei maitatuta daudela ziurtatuz eta <strong>haien ongizate emozionala indartuz.</strong></p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/My parents split up.png" alt="Libro 2">
@@ -308,7 +309,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Del reves 2</h3>
-                    <p>Del Revés 2 jokoa 4 urtetik gorako haurrei zuzenduta dago, euren emozioak identifikatzen, izendatzen eta ulertzen laguntzeko. Jolas dibertigarriak eta jarduera sortzaileak erabiliz, emozioen adierazpena eta kudeaketa sustatzen ditu modu hezigarri eta atseginean.</p> 
+                    <p>Del Revés 2 jokoa 4 urtetik gorako haurrei zuzenduta dago, euren <strong>emozioak identifikatzen, izendatzen eta ulertzen laguntzeko</strong>. Jolas dibertigarriak eta jarduera sortzaileak erabiliz, emozioen adierazpena eta kudeaketa sustatzen ditu modu hezigarri eta atseginean.</p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/Del reves 2.jpg" alt="Libro 2">
@@ -319,7 +320,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Emotional roller coaster</h3>
-                    <p>Jokoa adin guztietako haurrei zuzenduta dago, haserrea kudeatzen eta lasaitzen laguntzeko. Ariketa dibertigarriak, arnasketa eta kontzientzia praktikak erabiliz, emozioak ulertzen, arazoak konpontzen eta autoadierazpena sustatzen laguntzen du, bai ikastetxean, bai etxean, bai lagunekin jokatzen denean.</p> 
+                     <p>Jokoa adin guztietako haurrei zuzenduta dago, <strong>haserrea kudeatzen eta lasaitzen laguntzeko</strong>. Ariketa dibertigarriak, arnasketa eta kontzientzia praktikak erabiliz, emozioak ulertzen, arazoak konpontzen eta autoadierazpena sustatzen laguntzen du, bai ikastetxean, bai etxean, bai lagunekin jokatzen denean.</p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/Emotional roller coaster.jpg" alt="Libro 2">
@@ -330,7 +331,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Behind the anger</h3>
-                    <p>Haurren haserrearen kontrola jokoa karta-joko dibertigarria eta terapeutikoa da, haurrei haserrea modu osasuntsuan kudeatzen laguntzeko. Jokalariak emozioak identifikatzen eta arazoei aurre egiteko estrategiak garatzen ikasten dute, emozioen erregulazioa eta autokontrola sustatuz.</p> 
+                    <p>Haurren haserrearen kontrola jokoa karta-joko dibertigarria eta terapeutikoa da, <strong>haurrei haserrea modu osasuntsuan kudeatzen laguntzeko</strong>. Jokalariak emozioak identifikatzen eta arazoei aurre egiteko estrategiak garatzen ikasten dute, emozioen erregulazioa eta autokontrola sustatuz.</p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/Behind the anger.jpg" alt="Libro 2">
@@ -341,7 +342,7 @@
             <div class="box book-box">
                 <div class="book-info">
                     <h3>Strong suit</h3>
-                    <p>Familien eta harremanen jokoa familientzako eta terapia-jolaserako egokia da. Dorrea eraikitzen duten bitartean, istorioak partekatzen dituzte, elkar laguntzen dute eta lotura emozionalak indartzen dituzte, jolasa une esanguratsu bihurtuz. Taldeetan, gelatan edo aholku-bulegoetan erabiltzeko ere aproposa da, komunikazioa, enpatia, talde-lana eta txandak errespetuz hartzea sustatzen baititu.</p> 
+                    <p>Familien eta harremanen jokoa familientzako eta terapia-jolaserako egokia da. Dorrea eraikitzen duten bitartean, istorioak partekatzen dituzte, elkar laguntzen dute eta <strong>lotura emozionalak indartzen</strong> dituzte, jolasa une esanguratsu bihurtuz. Taldeetan, gelatan edo aholku-bulegoetan erabiltzeko ere aproposa da, komunikazioa, enpatia, talde-lana eta txandak errespetuz hartzea sustatzen baititu.</p> 
                 </div>
                 <div class="book-cover">
                     <img src="img/Strong suit.jpg" alt="Libro 2">
