--- a/Komunikazioa eta koordinazioa (Familiak).html
+++ b/Komunikazioa eta koordinazioa (Familiak).html
@@ -188,7 +188,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -217,7 +217,7 @@
         <!-- INTRO -->
         <div class="intro">
             <h2>Ikastetxearekin komunikazioaren garrantzia</h2>
-            <p>Haurraren ongizatea bermatzeko, familia eta eskolaren arteko lankidetza funtsezkoa da. Dibortzio-prozesuetan, egoera emozional eta sozialetan egokitzeko laguntza hoberena eskaintzeko, gurasoek eskolari informazioa ematea eta komunikazio kooperatiboa mantentzea garrantzitsua da.</p>
+            <p>Haurraren <strong>ongizatea bermatzeko</strong>, familia eta eskolaren arteko <strong>lankidetza funtsezkoa</strong> da. Dibortzio-prozesuetan, egoera emozional eta sozialetan egokitzeko laguntza hoberena eskaintzeko, <strong>gurasoek eskolari informazioa ematea eta komunikazio kooperatiboa mantentzea garrantzitsua</strong> da.</p>
         </div>
 
         <!-- Nola egin -->
@@ -225,10 +225,10 @@
             <h3>Nola egin?</h3>
             <div class="section-box">
                 <ul>
-                    <li>Egoera familiarra eskolari jakinaraztea ezinbestekoa da. Familia batzuk saihestu dezakete, baina haurra babesteko eta laguntzeko ezinbesteko pauso bat da.</li>
-                    <li>Tutore eta irakasleekin komunikazio irekia eta lankidetza jarraitu behar da.</li>
-                    <li>Helburua: bi esparruetan laguntza koherentea eskaintzeko lankidetza koordinatua.</li>
-                    <li>Aldiz, saihestu behar da irakasleari krisi familal osoa kudeatzea esleitzea, bakoitzaren rolak errespetatuz.</li>
+                    <li>Egoera familiarra eskolari jakinaraztea <strong>ezinbestekoa</strong> da. Familia batzuk saihestu dezakete, baina haurra babesteko eta laguntzeko ezinbesteko pauso bat da.</li>
+                    <li>Tutore eta irakasleekin komunikazio <strong>irekia eta lankidetza jarraitu </strong>behar da.</li>
+                    <li><strong>Helburua:</strong> bi esparruetan laguntza koherentea eskaintzeko lankidetza koordinatua.</li>
+                    <li>Aldiz, <strong>sahiestu</strong> behar da irakasleari krisi familal osoa kudeatzea esleitzea, bakoitzaren rolak errespetatuz.</li>
                 </ul>
             </div>
         </div>
