--- a/Komunikazioa eta koordinazioa (Irakasleak).html
+++ b/Komunikazioa eta koordinazioa (Irakasleak).html
@@ -188,7 +188,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
@@ -218,7 +218,7 @@
         <div class="intro">
             <h2>Komunikazioaren garrantzia hezkuntza-esparruan</h2>
             <p>
-            Dibortzio-prozesuak bizi dituzten haurrek aldaketa emozionalak, sozialak eta portaerazkoak izan ditzakete, eta horiek eskolako egunerokoan islatzen dira. Testuinguru horretan, komunikazioa eta koordinazioa funtsezko tresnak dira haurraren ongizatea bermatzeko. Atal honek irakasleen eta familien arteko lankidetza, baita irakaslearen eta haurraren arteko harremana ere, indartzea du helburu, laguntza koherentea, errespetuzkoa eta egokitua eskaintzeko. Ondoko azpiataletan, familiarekin eta haurrarekin komunikatzeko orientabide praktikoak aurkezten dira, betiere haurraren segurtasun emozionala eta egokitze-prozesua errazteko asmoz.
+            Dibortzio-prozesuak bizi dituzten haurrek <strong>aldaketa emozionalak, sozialak eta portaerazkoak</strong> izan ditzakete, eta horiek <strong>eskolako egunerokoan</strong> islatzen dira. Testuinguru horretan, <strong>komunikazioa eta koordinazioa</strong> funtsezko tresnak dira <strong>haurraren ongizatea</strong> bermatzeko. Atal honek <strong>irakasleen eta familien arteko lankidetza</strong>, baita <strong>irakaslearen eta haurraren arteko harremana</strong> ere, indartzea du helburu, laguntza koherentea, errespetuzkoa eta egokitua eskaintzeko. Ondoko azpiataletan, familiarekin eta haurrarekin komunikatzeko orientabide praktikoak aurkezten dira, betiere haurraren segurtasun emozionala eta egokitze-prozesua errazteko asmoz.
             </p>
         </div>
 
@@ -227,7 +227,7 @@
             <h3>Familiarekin</h3>
             <div class="section-box">
                 <p>
-                    Familiarekin komunikazioa eta koordinazioa funtsezko estrategia da haurraren aldaketa emozional eta sozialetara egokitzeko. Irakasleak bitartekari gisa jokatu behar du, gurasoen rola errespetatuz eta etxeko espazioan inbaditu gabe, eta aldi berean haurra behar bezala laguntzeko garrantzia emanez. Helburua da komunikazio errespetuzkoa eta lagungarria mantentzea, haurra seguru eta ongi egongo dela sentiaraziz, eta familiarekin lankidetza egokia bultzatuz.
+                    <strong>Familiarekin komunikazioa eta koordinazioa</strong> funtsezko estrategia da <strong>haurraren aldaketa emozional eta sozialetara egokitzeko</strong>. Irakasleak <strong>bitartekari gisa</strong> jokatu behar du, <strong>gurasoen rola errespetatuz</strong> eta <strong>etxeko espazioan inbaditu gabe</strong>, eta aldi berean haurra behar bezala laguntzeko garrantzia emanez. Helburua da <strong>komunikazio errespetuzkoa eta lagungarria mantentzea</strong>, <strong>haurra seguru eta ongi egongo dela sentiaraziz</strong>, eta familiarekin lankidetza egokia bultzatuz.
                 </p>
 
                 <h4>Irakasleak kontuan hartu beharrekoa</h4>
@@ -245,7 +245,7 @@
             <h3>Haurrarekin</h3>
             <div class="section-box">
                 <p>
-                    Haurrarekin komunikazioa funtsezkoa da haurraren ongizatea eta egokitze emozionala sustatzeko. Irakaslearen rola laguntza eta sostengu emozionaleko figura izatea da, espazio segurua sortuz non haurra entzuten eta ulertua sentitzen den. Irakasleak eskura izan behar du aukera emateko ikasleak bere erreakzioak adierazi ditzan eta beharrezko laguntza eskaintzeko une egokian.
+                    <strong>Haurrarekin komunikazioa</strong> funtsezkoa da <strong>haurraren ongizatea eta egokitze emozionala sustatzeko</strong>. Irakaslearen rola</strong> <strong>laguntza eta sostengu emozionaleko figura izatea</strong> da, espazio segurua sortuz non haurra entzuten eta ulertua sentitzen den. <strong>Irakasleak eskura izan behar</strong> du aukera emateko ikasleak bere erreakzioak adierazi ditzan eta beharrezko laguntza eskaintzeko une egokian.
                 </p>
 
                 <h4>Nola komunikatu</h4>
