--- a/Laguntza profesionala (Familiak).html
+++ b/Laguntza profesionala (Familiak).html
@@ -190,7 +190,7 @@
   <!-- BARRA AZUL CON LOGO Y MENÚ -->
   <div class="top-header">
     <div class="header-content">
-      <div class="logo">Hezkuntza Baliabideak</div>
+      <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
       <nav>
         <ul>
           <li><a href="index.html">Hasiera</a></li>
@@ -218,7 +218,7 @@
     <section class="intro">
       <h2>Laguntza espezializatua haurren ongizaterako</h2>
       <p>
-        Dibortzio-prozesuan, gurasoek hainbat programa eta baliabide profesional erabil ditzakete, seme-alaben ongizatea bermatzeko eta komunikazioa hobetzeko. Programak haurrei eta familiei laguntza koordinatua eskaintzen die, emozioen kudeaketa eta harreman positiboa sustatuz.
+        Dibortzio-prozesuan, gurasoek hainbat <strong>programa eta baliabide profesional</strong> erabil ditzakete, seme-alaben <strong>ongizatea bermatzeko eta komunikazioa hobetzeko</strong>. Programak haurrei eta familiei laguntza koordinatua eskaintzen die, emozioen kudeaketa eta harreman positiboa sustatuz.
       </p>
     </section>
 
@@ -226,9 +226,10 @@
              <div class="card">
           <h3><span class="emoji">🤝</span>Kanpoko esku-hartze programak</h3>
           <ul>
-            <li><strong>“Egokitzen” programa (Deusto FamilyPsych):</strong> Dibortzio gatazkatsuetarako diseinatua. Familia osoarekin lan egiten du, parentalitate positiboa eta haurren ongizatea sustatzeko.</li>
-            <li><strong>“Bikotearen Haustura, Familiaren Haustura” programa:</strong> Guraso eta haurrekin esku hartzen du, desoreka emozionala murrizteko eta komunikazio familiarra hobetzeko.</li>
-            <li><strong>CODIP programak (Children of Divorce Intervention Program):</strong> Prebentzio eta esku-hartze programak dira; haurrentzako talde-laguntza eskaintzen dute, sentimenduak adierazteko eta arazoak konpontzeko trebetasunak lantzeko.</li>
+           <li><strong>“Egokitzen” programa (Deusto FamilyPsych):</strong> Dibortzio gatazkatsuetarako diseinatua. Familia osoarekin lan egiten du, parentalitate positiboa eta haurren ongizatea sustatzeko.<strong> Ikusi programa <a href="https://deustofamilypsych.deusto.es/conflicto/" target="_blank">Hemen</a>.</strong></li> 
+            <li><strong>“Bikotearen Haustura, Ez Familiaren Haustura” programa:</strong> Guraso eta haurrekin esku hartzen du, desoreka emozionala murrizteko eta komunikazio familiarra hobetzeko.<strong> Ikusi programa <a href="PDF/Fariña, F., Seijo, D., Arce, R. eta Novo, M. (2002a).pdf" target="_blank">Hemen</a>.</strong></li>
+            <li><strong>CODIP programak (Children of Divorce Intervention Program):</strong> Prebentzio eta esku-hartze programak dira; haurrentzako talde-laguntza eskaintzen dute, sentimenduak adierazteko eta arazoak konpontzeko trebetasunak lantzeko.<strong> Ikusi programa <a href="PDF/Fariña, F., Seijo, D., Arce, R. eta Novo, M. (2002b).pdf" target="_blank">Hemen</a>.</strong></li>
+            <li><strong>"Haurren doikuntza psikologikoa hobetzea dibortzioaren ondoren" programa:</strong> Lehen Hezkuntzako bigarren zikloko (8-10 urte) haurrei zuzendutako programa, zeinak talde-metodologia aktibo eta malgua erabiltzen du emozioen egokitzapena lantzeko.<strong> Ikusi programa <a href="PDF/Mendoza Barrionuevo (2015).pdf" target="_blank">Hemen</a>.</strong></li>
           </ul>
         </div>
 
