--- a/Laguntza profesionala (Irakasleak).html
+++ b/Laguntza profesionala (Irakasleak).html
@@ -190,7 +190,7 @@
   <!-- BARRA AZUL CON LOGO Y MENÚ -->
   <div class="top-header">
     <div class="header-content">
-      <div class="logo">Hezkuntza Baliabideak</div>
+      <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
       <nav>
         <ul>
           <li><a href="index.html">Hasiera</a></li>
@@ -218,11 +218,7 @@
     <section class="intro">
       <h2>Laguntza espezializatua ikasleen ongizaterako</h2>
       <p>
-        Laguntza profesionala funtsezkoa da haurraren ongizatea eta hezkuntza prozesua modu egokian laguntzeko,
-        bereziki dibortzio-prozesuetan. Irakasleak ezin du guztiz bakarrik erantzun egoera emozional konplexu horiei,
-        eta, beraz, orientatzaile, psikologo eskolar eta kanpoko esku-hartze programen laguntza jasotzea beharrezkoa da.
-        Helburua da haurra modu seguru eta egokian laguntzea, eta irakasleak behar bezala gidatzea,
-        haurra eta familiaren ongizatea bermatuz.
+        <strong>Laguntza profesionala</strong> funtsezkoa da <strong>haurraren ongizatea eta hezkuntza prozesua modu egokian laguntzeko</strong>, bereziki dibortzio-prozesuetan. Irakasleak ezin du guztiz bakarrik erantzun egoera emozional konplexu horiei, eta, beraz, <strong>orientatzaile, psikologo eskolar eta kanpoko esku-hartze programen laguntza</strong> jasotzea beharrezkoa da. Helburua da <strong>haurra modu seguru eta egokian laguntzea</strong>, eta <strong>irakasleak behar bezala gidatzea</strong>, haurra eta familiaren ongizatea bermatuz.
       </p>
     </section>
 
@@ -233,9 +229,7 @@
         <div class="card">
           <h3><span class="emoji">🎓</span>Orientatzailea / Psikologo eskolarra</h3>
           <p>
-            Bere rola giltzarria da gelako giroa behatzea eta irakasleei jarduteko jarraibideak ematea.
-            Haurra modu egokian laguntzeko estrategiak eskaintzen ditu, talde-dinamikak aztertuz
-            eta arazo posibleak identifikatuz.
+           Bere <strong>rola giltzarria</strong> da gelako giroa behatzea eta irakasleei jarduteko jarraibideak ematea. <strong>Haurra modu egokian laguntzeko estrategiak eskaintzen</strong> ditu, talde-dinamikak aztertuz eta arazo posibleak identifikatuz.
           </p>
         </div>
 
@@ -246,9 +240,10 @@
             Programa nagusien artean honako hauek daude:
           </p>
           <ul>
-            <li><strong>“Egokitzen” programa (Deusto FamilyPsych):</strong> Dibortzio gatazkatsuetarako diseinatua. Familia osoarekin lan egiten du, parentalitate positiboa eta haurren ongizatea sustatzeko.</li>
-            <li><strong>“Bikotearen Haustura, Familiaren Haustura” programa:</strong> Guraso eta haurrekin esku hartzen du, desoreka emozionala murrizteko eta komunikazio familiarra hobetzeko.</li>
-            <li><strong>CODIP programak (Children of Divorce Intervention Program):</strong> Prebentzio eta esku-hartze programak dira; haurrentzako talde-laguntza eskaintzen dute, sentimenduak adierazteko eta arazoak konpontzeko trebetasunak lantzeko.</li>
+            <li><strong>“Egokitzen” programa (Deusto FamilyPsych):</strong> Dibortzio gatazkatsuetarako diseinatua. Familia osoarekin lan egiten du, parentalitate positiboa eta haurren ongizatea sustatzeko. <strong> Ikusi programa <a href="https://deustofamilypsych.deusto.es/conflicto/" target="_blank">Hemen</a>. </strong></li> 
+            <li><strong>“Bikotearen Haustura, Ez Familiaren Haustura” programa:</strong> Guraso eta haurrekin esku hartzen du, desoreka emozionala murrizteko eta komunikazio familiarra hobetzeko. <strong> Ikusi programa <a href="PDF/Fariña, F., Seijo, D., Arce, R. eta Novo, M. (2002a).pdf" target="_blank">Hemen</a>.</strong></li>
+            <li><strong>CODIP programak (Children of Divorce Intervention Program):</strong> Prebentzio eta esku-hartze programak dira; haurrentzako talde-laguntza eskaintzen dute, sentimenduak adierazteko eta arazoak konpontzeko trebetasunak lantzeko.<strong> Ikusi programa <a href="PDF/Fariña, F., Seijo, D., Arce, R. eta Novo, M. (2002b).pdf" target="_blank">Hemen</a>.</strong></li>
+            <li><strong>"Haurren doikuntza psikologikoa hobetzea dibortzioaren ondoren" programa:</strong>Lehen Hezkuntzako bigarren zikloko (8-10 urte) haurrei zuzendutako programa, zeinak talde-metodologia aktibo eta malgua erabiltzen du emozioen egokitzapena lantzeko.<strong> Ikusi programa <a href="PDF/Mendoza Barrionuevo (2015).pdf" target="_blank">Hemen</a>.</strong></li>
           </ul>
         </div>
 
