--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: Times New Roman;
             color: #000000;
             margin: 0;
+            background-color: #ffffff;
         }
 
         /* Header */
@@ -189,7 +190,7 @@
 <body>
     <header>
         <div class="container header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Sarrera</a></li>
@@ -213,16 +214,15 @@
         </div>
     </section>
 
-    <h2 style="margin-top: 40px; font-size: 4rem; text-align: center; color:#3D5D5F">
-        Hemen hasten da bidea
-    <h2>
+    <h2 style="margin-top: 40px; font-size: 4rem; text-align: center; color:#0A3A5A">Hemen hasten da bidea</h2>
+    
 
     <!-- EKIMENA (TEXTO IZQUIERDA – FOTO DERECHA) -->
     <section class="info-section">
         <div class="info-text">
             <h2 style="margin-left: 40px; color: #4a90e2">Ekimena</h2>
-            <p style="margin-left: 40px; margin-top: 30px; text-align: justify;">
-                Espazio hau irakasleei eta familiei zuzenduta dago, bereziki etxean dibortzio-egoera baten eragina jasaten ari diren ikasleei laguntzeko. Hemen aurkituko dituzue informazio argia, baliabide praktikoak eta azken ikerketetan oinarritutako orientabideak, egoera horiei modu kontziente eta errespetuz erantzuteko.
+            <p style="margin-left: 40px; margin-top: 30px; text-align: justify; font-size: 1.1rem; font-family: 'Times New Roman';">
+                Espazio hau <strong>irakasleei eta familiei</strong> zuzenduta dago, bereziki etxean <strong>dibortzio-egoera baten eragina</strong> jasaten ari diren ikasleei laguntzeko. Hemen aurkituko dituzue informazio argia, baliabide praktikoak eta azken ikerketetan oinarritutako orientabideak, egoera horiei modu kontziente eta errespetuz erantzuteko.
             </p>
         </div>
 
@@ -239,7 +239,7 @@
 
         <div class="info-text">
             <h2 style="margin-right;: 40px; margin-top: 30px; color: #4a90e2">Helburua</h2>
-            <p style="margin-right: 40px; margin-top: 30px; text-align: justify;">Helburua da ikastetxearen eta etxeko ingurunearen arteko lankidetza sustatzea, ikasleen garapen integrala eta ongizatea bultzatuz. Baliabide hauek erabiliz, familien eta irakasleen arteko komunikazioa sendotu eta laguntza egokia eskaintzea posible egiten da.</p>
+            <p style="margin-right: 40px; margin-top: 30px; text-align: justify; font-size: 1.1rem; font-family: 'Times New Roman';">Helburua da <strong>ikastetxearen eta etxeko ingurunearen arteko lankidetza</strong> sustatzea, <strong>ikasleen garapen integrala eta ongizatea</strong> bultzatuz. Baliabide hauek erabiliz, familien eta irakasleen arteko komunikazioa sendotu eta laguntza egokia eskaintzea posible egiten da.</p>
         </div>
     </section>
 
