--- a/Baliabideak.html
+++ b/Baliabideak.html
@@ -193,7 +193,7 @@
     <!-- HEADER -->
     <header>
         <div class="header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -222,10 +222,9 @@
             <div class="section-title">
                 <h2>Baliabide Orokorrak</h2>
                 <p>
-                    Ikasleek dibortzio-egoeran bizi ditzaketen emozio eta egoera zailak kudeatzeko, irakasleek eskura izatea baliabide egokiak funtsezkoa da. Atal honetan, material praktikoak, ipuin eta ikus-entzunezkoak, gelarako jarduerak, dinamikak, eta komunikazioa errazteko tresnak bildu dira. Helburua da irakasleei laguntza eskuragarria eskaintzea, ikasleen ongizate emozionala eta ikaskuntza prozesua babesten lagunduko duten tresnekin.
-                </p>
+                    Ikasleek dibortzio-egoeran bizi ditzaketen emozio eta egoera zailak kudeatzeko, <strong>irakasleek eskura izatea baliabide egokiak</strong> funtsezkoa da. Atal honetan, material praktikoak, ipuin eta ikus-entzunezkoak, gelarako jarduerak, dinamikak, eta komunikazioa errazteko tresnak bildu dira. Helburua da <strong>irakasleei laguntza eskuragarria eskaintzea</strong>, ikasleen ongizate emozionala eta ikaskuntza prozesua babesten lagunduko duten tresnekin.
             <div class="section-title">
-                <p>Baliabide hauek iraunkorrak, erraz aplikatzeko modukoak eta eguneroko praktikarekin bateragarriak dira; gainera, atal bakoitzean adin-tarteari eta egoera emozionalari egokitutako proposamenak aurkituko dituzu. Gogoratu: material hauek irakaslearen lana osatzeko dira, ez ordezkatzeko; eta egoera bakoitzaren arabera moldatu beharko dira.</p>
+                <p>Baliabide hauek <strong>iraunkorrak, erraz aplikatzeko modukoak eta eguneroko praktikarekin bateragarriak </strong>dira; gainera, atal bakoitzean adin-tarteari eta egoera emozionalari egokitutako proposamenak aurkituko dituzu. <strong>Gogoratu:</strong> material hauek irakaslearen lana osatzeko dira, ez ordezkatzeko; eta egoera bakoitzaren arabera moldatu beharko dira.</p>
               </div>
 
             <!-- CAJAS -->
@@ -234,37 +233,37 @@
                 <a href="Ipuinak eta album ilustratuak (Irakasleak).html" class="box">
                     <span class="emoji">📚</span>
                     <h3>Ipuinak eta album ilustratuak</h3>
-                    <p>Baliabide hauek haurren emozioak lantzeko aukera ematen dute, istorioen bidez. Dibortzioa, familia-aniztasuna edo aldaketa emozionalak modu natural eta ulergarrian lantzen laguntzen dute.</p>
+                    <p>Baliabide hauek haurren <strong>emozioak lantzeko aukera</strong> ematen dute, istorioen bidez. Dibortzioa, familia-aniztasuna edo aldaketa emozionalak modu natural eta ulergarrian lantzen laguntzen dute.</p>
                 </a>
 
                 <a href="Bideoak eta ikus-entzunezkoak (Irakasleak).html" class="box">
                     <span class="emoji">🎬</span>
                     <h3>Bideoak eta ikus-entzunezkoak</h3>
-                    <p>Ikus-entzunezkoek egoera konplexuak modu bisualean azaltzen dituzte, haurren arreta eta ulermena erraztuz. Enpatia, emozioen identifikazioa eta hausnarketa sustatzeko tresna egokiak dira.</p>
+                    <p>Ikus-entzunezkoek <strong>egoera konplexuak modu bisualean azaltzen</strong> dituzte, haurren arreta eta ulermena erraztuz. Enpatia, emozioen identifikazioa eta hausnarketa sustatzeko tresna egokiak dira.</p>
                 </a>
 
                 <a href="Gelarako jarduerak eta ariketa praktikoak (Irakasleak).html" class="box">
                     <span class="emoji">✏️</span>
                     <h3>Gelarako jarduerak eta ariketa praktikoak</h3>
-                    <p>Jarduera hauek gelan zuzenean aplikatzeko pentsatuta daude, ikasleen parte-hartzea eta adierazpen emozionala bultzatuz. Esperientzia praktikoen bidez ikaskuntza esanguratsua sustatzen dute.</p>
+                    <p>Jarduera hauek gelan zuzenean aplikatzeko pentsatuta daude, ikasleen parte-hartzea eta adierazpen emozionala bultzatuz. Esperientzia praktikoen bidez <strong>ikaskuntza esanguratsua sustatzen</strong> dute.</p>
                 </a>
 
                 <a href="Abestiak eta musika baliabideak (Irakasleak).html" class="box">
                     <span class="emoji">🎵</span>
                     <h3>Abestiak eta musika baliabideak</h3>
-                    <p>Musikak emozioak adierazteko eta kudeatzeko bide eraginkorra eskaintzen du. Abestien bidez, ikasleek sentimenduak identifikatu, lasaitu eta partekatzeko aukera dute.</p>
+                    <p>Musikak <strong>emozioak adierazteko eta kudeatzeko</strong> bide eraginkorra eskaintzen du. Abestien bidez, ikasleek sentimenduak identifikatu, lasaitu eta partekatzeko aukera dute.</p>
                 </a>
 
                 <a href="Jolasak (Irakasleak).html" class="box">
                     <span class="emoji">🎲</span>
                     <h3>Jolasak</h3>
-                    <p>Jolasen bidez, ikasleek modu naturalean lantzen dituzte emozioak, harremanak eta gatazken kudeaketa. Ikaskuntza ludikoa eta soziala sustatzen duten baliabideak dira.</p>
+                    <p>Jolasen bidez, ikasleek <strong>modu naturalean lantzen</strong> dituzte emozioak, harremanak eta gatazken kudeaketa. Ikaskuntza ludikoa eta soziala sustatzen duten baliabideak dira.</p>
                 </a>
 
                 <a href="Ebaluazioa eta jarraipen tresnak (Irakasleak).html" class="box">
                     <span class="emoji">📊</span>
                     <h3>Ebaluazio eta jarraipen tresnak</h3>
-                    <p>Tresna hauek ikasleen ongizate emozionalaren jarraipena egiteko balio dute. Irakasleari laguntzen diote beharrak antzematen eta esku-hartze egokiak planifikatzen.</p>
+                    <p>Tresna hauek <strong>ikasleen ongizate emozionalaren jarraipena </strong>egiteko balio dute. Irakasleari laguntzen diote beharrak antzematen eta esku-hartze egokiak planifikatzen.</p>
                 </a>
 
             </div>
