--- a/Familiak.html
+++ b/Familiak.html
@@ -169,7 +169,7 @@
     <!-- Cabecera / Header -->
     <header>
         <div class="container header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -197,7 +197,7 @@
             <div class="section-title">
                 <h2>Familientzako Orientabideak eta Baliabideak</h2>
                 <p>
-                    Familiek funtsezko rola dute haurren ongizatean eta garapen integralean, bereziki dibortzio- edo banaketa-prozesuek eragina izan dezaketen uneetan. Sekzio honek orientabide praktikoak eta baliabide hezigarriak eskaintzen dizkie familiei, egoera horiei modu kontziente, seguru eta maitasunez erantzuteko. Hemen aurkituko dituzue bi atal nagusi: “Orientabideak”, non aholkuak eta jarraibideak ematen diren haurren beharrak ulertzeko eta laguntzeko, eta “Baliabideak”, non jarduera, ipuin, bideo eta material praktikoak aurkituko dituzuen, etxean aplikatzeko prest.
+                    Familiek funtsezko rola dute haurren <strong>ongizatean eta garapen integralean</strong>, bereziki dibortzio- edo banaketa-prozesuek eragina izan dezaketen uneetan. Sekzio honek <strong>orientabide praktikoak eta baliabide hezigarriak</strong> eskaintzen dizkie familiei, egoera horiei modu kontziente, seguru eta maitasunez erantzuteko. Hemen aurkituko dituzue bi atal nagusi: <strong>“Orientabideak”</strong>, non aholkuak eta jarraibideak ematen diren haurren beharrak ulertzeko eta laguntzeko, eta <strong>“Baliabideak”</strong>, non jarduera, ipuin, bideo eta material praktikoak aurkituko dituzuen, etxean aplikatzeko prest.
                 </p>
             </div>
 
