--- a/Ipuinak eta album ilustratuak (Familiak).html
+++ b/Ipuinak eta album ilustratuak (Familiak).html
@@ -211,7 +211,7 @@
 <!-- HEADER -->
 <header>
     <div class="header-content">
-        <div class="logo">Hezkuntza Baliabideak</div>
+        <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
         <nav>
             <ul>
                 <li><a href="index.html">Hasiera</a></li>
