--- a/Orientabideak (Familiak).html
+++ b/Orientabideak (Familiak).html
@@ -193,7 +193,7 @@
     <!-- HEADER -->
     <header>
         <div class="header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -222,7 +222,7 @@
             <div class="section-title">
                 <h2>Orientabide Orokorrak</h2>
                 <p>
-                    Familia batek dibortzio-prozesu batean seme-alabekin laguntza egokia eskaintzea funtsezkoa da haien ongizatea eta garapen emozionala bermatzeko. Atal honetan, gurasoek arreta jarri dezaketen alerta-seinale nagusiak, ikasleekin komunikatzeko aholkuak eta beharrezko laguntza profesionalak aurkezten dira. Informazio hau erabiliz, familia bakoitzak modu eraginkorrean lagundu dezake haurra aldaketa emozional eta sozialetara egokitzen, eta Baliabideak atalean aurkituko dituzue plantillak eta material osagarria.</p>
+                    Familia batek dibortzio-prozesu batean seme-alabekin <strong>laguntza egokia</strong> eskaintzea funtsezkoa da haien <strong>ongizatea eta garapen emozionala bermatzeko</strong>. Atal honetan, gurasoek arreta jarri dezaketen alerta-seinale nagusiak, ikasleekin komunikatzeko aholkuak eta beharrezko laguntza profesionalak aurkezten dira. Informazio hau erabiliz, <strong>familia bakoitzak modu eraginkorrean</strong> lagundu dezake haurra aldaketa emozional eta sozialetara egokitzen, eta <strong>Baliabideak</strong> atalean aurkituko dituzue plantillak eta material osagarria.</p>
             </div>
 
             <!-- CAJAS -->
