--- a/Orientabideak.html
+++ b/Orientabideak.html
@@ -193,7 +193,7 @@
     <!-- HEADER -->
     <header>
         <div class="header-content">
-            <div class="logo">Hezkuntza Baliabideak</div>
+            <div class="logo">Dibortzioa Haurtzaroan: Hezkuntza Baliabideak</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Hasiera</a></li>
@@ -222,7 +222,7 @@
             <div class="section-title">
                 <h2>Orientabide Orokorrak</h2>
                 <p>
-                    Orientabideak atari honek ikasleen behar emozionalak eta hezigarriak modu egokian identifikatzeko eta erantzuteko jarraibide praktikoak eskaintzen ditu. Ikastetxeko testuinguruan, irakasleek nola jokatu, nola koordinatu eta nola lagundu azalduko da, ikasleen ongizatea eta garapen integrala bermatzeko.
+                    Orientabideak atari honek <strong>ikasleen behar emozionalak eta hezigarriak</strong> modu egokian identifikatzeko eta erantzuteko <strong>jarraibide praktikoak</strong> eskaintzen ditu. Ikastetxeko testuinguruan, irakasleek <strong>nola jokatu, nola koordinatu eta nola lagundu</strong> azalduko da, <strong>ikasleen ongizatea eta garapen integrala</strong> bermatzeko.
                 </p>
             </div>
 
